--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
   <display-name>EazyDeals</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -9,12 +9,10 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
-  
   <error-page>
-  	<error-code>404</error-code>
-  	<location>/error_page.jsp</location>
+    <error-code>404</error-code>
+    <location>/error_page.jsp</location>
   </error-page>
-  
   <servlet>
     <description></description>
     <display-name>ConnectionProvider</display-name>
@@ -174,5 +172,15 @@
   <servlet-mapping>
     <servlet-name>ChangePasswordServlet</servlet-name>
     <url-pattern>/ChangePasswordServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>StatisticBenefit</display-name>
+    <servlet-name>StatisticBenefit</servlet-name>
+    <servlet-class>com.eazydeals.servlets.StatisticBenefit</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>StatisticBenefit</servlet-name>
+    <url-pattern>/StatisticBenefit</url-pattern>
   </servlet-mapping>
 </web-app>
